# databricks-apps

./: .gitignore  LICENSE.md  NOTICE.md  README.md  SECURITY.md
app-api/: app.py  example_request.py
app-interactive/: app.py
apps-shell/: app.py  app.yaml  deploy_app.py  requirements.txt
apps-write-back/: app.yaml  requirements.txt
apps-write-back/src/: database_postgres.py
auth-demo/: README.md  app.py  auth.py  pyproject.toml  requirements.txt  sql.py  utils.py
dash-dbx-writeback/: .gitignore  Makefile  README.md  app.yaml  app.yml  databricks.yml  example.env  pyproject.toml  requirements-dev.txt  requirements.txt
dash-dbx-writeback/resources/: excel_the_dash_way.yml
dash-dbx-writeback/setup/: setup_delta_tables.py  setup_postgres_tables.py
dash-dbx-writeback/src/: app.py  database_delta.py  utilities.py
dash-dbx-writeback/src/dash_dbx_writeback/: __init__.py  __main__.py  app.py  app.yaml  config.py  database_operations.py  initialize_app.py  main.py  sample_data.py
dash-dbx-writeback/src/dash_dbx_writeback/callbacks/: __init__.py  input_callbacks.py  results_callbacks.py  tables.py  volumes.py
dash-dbx-writeback/src/dash_dbx_writeback/components/: __init__.py  grid_utils.py  input.py  results.py  tabs.py
dash-dbx-writeback/src/dash_dbx_writeback/pages/: __init__.py  about.py  home.py  results.py
dash-dbx-writeback/src/pages/: excel_upload.py  form.py  table_edit.py
dash-dbx-writeback/tests/: README.md  cleanup_test_database.py  conftest.py  setup_test_database.py  test_dbx_table.py  test_excel_callbacks.py  test_grid_utils.py  test_input.py  test_postgresql_integration.py
mcp-server-hello-world/server/: app.py  (+1 more)
streamlit-chatbot-app/: app.yaml
vector-search/: README.md  app.py  app.yaml  requirements.txt  setup.py
(+8 files in other folders)
