[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "dash_dbx_writeback"
version = "0.1.0"
description = "Example of using Dash AG-Grid for Writeback use-cases with PostgreSQL"
requires-python = ">=3.11.1"
dependencies = [
    "dash==3.0.4",
    "dash-bootstrap-components==2.0.3",
    "pandas==2.2.3",
    "plotly==6.1.1",
    "python-dotenv==1.1.0",
    "dash-ag-grid==31.3.1",
    "dash-mantine-components==1.3.0",
    "dash-iconify==0.1.2",
    "psycopg[binary,pool]==3.2.1",
    "databricks-sdk>=0.60.0",
    "SQLAlchemy==2.0.36",
]

[project.optional-dependencies]
dev = [
    "dash[testing]==3.0.4",
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "black"
]

[project.urls]
Homepage = "https://github.com/databricks-solutions/databricks-apps-examples"
Repository = "https://github.com/databricks-solutions/databricks-apps-examples"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
pythonpath = [
    "src"
]
